--- a/src/partials/about-hotel.html
+++ b/src/partials/about-hotel.html
@@ -12,112 +12,114 @@
       </p>
     </div>
 
-    <div >
+    <div>
       <div class="hotel-card">
-         <picture class="hotel-card__photo--left">
+        <picture class="hotel-card__photo--left">
           <source
             srcset="
-              ./images/main/about-hotel/about-hotel-1-desk.jpg,
-              ./images/main/about-hotel/about-hotel-1-desk-2x.jpg 2x
+              ./images/main/about-hotel/about-hotel-1-desk.jpg    460w,
+              ./images/main/about-hotel/about-hotel-1-desk-2x.jpg 920w
             "
             media="(min-width: 1280px)"
+            sizes="(min-width: 1280px) 460px, 100vw"
           />
           <source
             srcset="
-              ./images/main/about-hotel/about-hotel-1-tab.jpg,
-              ./images/main/about-hotel/about-hotel-1-tab-2x.jpg 2x
+              ./images/main/about-hotel/about-hotel-1-tab.jpg    400w,
+              ./images/main/about-hotel/about-hotel-1-tab-2x.jpg 800w
             "
             media="(min-width: 1024px)"
+            sizes="(min-width: 1024px) 400px, 100vw"
           />
           <source
             srcset="
-              ./images/main/about-hotel/about-hotel-1-mob.jpg,
-              ./images/main/about-hotel/about-hotel-1-mob-2x.jpg 2x
+              ./images/main/about-hotel/about-hotel-1-mob.jpg    244w,
+              ./images/main/about-hotel/about-hotel-1-mob-2x.jpg 488w
             "
-            media="(min-width: 414px)"
+            media="(min-width: 320px)"
+            sizes="(min-width: 320px) 244px"
           />
           <img
             class="about-hotel__img"
             src="./images/main/about-hotel/about-hotel-1-desk.jpg"
             alt="Хол готелю з каміном і диванами"
-            sizes="(min-width: 1280px) 245px, (min-width: 1024px) 194px, (min-width: 414px) 245px, 80vw"
           />
         </picture>
-
       </div>
 
       <div class="hotel-card">
         <p class="hotel-card__description">
-            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-            sint. Velit officia consequat duis enim velit mollit. Exercitation
-            veniam consequat sunt nostrud amet.
-          </p>
-        
+          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+          sint. Velit officia consequat duis enim velit mollit. Exercitation
+          veniam consequat sunt nostrud amet.
+        </p>
+
         <picture class="hotel-card__photo--right">
           <source
             srcset="
-              ./images/main/about-hotel/about-hotel-2-desk.jpg,
-              ./images/main/about-hotel/about-hotel-2-desk-2x.jpg 2x
+              ./images/main/about-hotel/about-hotel-2-desk.jpg    460w,
+              ./images/main/about-hotel/about-hotel-2-desk-2x.jpg 920w
             "
             media="(min-width: 1280px)"
+            sizes="(min-width: 1280px) 460px, 100vw"
           />
           <source
             srcset="
-              ./images/main/about-hotel/about-hotel-2-tab.jpg,
-              ./images/main/about-hotel/about-hotel-2-tab-2x.jpg 2x
+              ./images/main/about-hotel/about-hotel-2-tab.jpg    400w,
+              ./images/main/about-hotel/about-hotel-2-tab-2x.jpg 800w
             "
             media="(min-width: 1024px)"
+            sizes="(min-width: 1024px) 460px, 100vw"
           />
           <source
             srcset="
-              ./images/main/about-hotel/about-hotel-2-mob.jpg,
-              ./images/main/about-hotel/about-hotel-2-mob-2x.jpg 2x
+              ./images/main/about-hotel/about-hotel-2-mob.jpg    244w,
+              ./images/main/about-hotel/about-hotel-2-mob-2x.jpg 488w
             "
-            media="(min-width: 414px)"
+            media="(min-width: 320px)"
+            sizes="(min-width: 320px) 244px"
           />
           <img
             class="about-hotel__img"
             src="./images/main/about-hotel/about-hotel-2-desk.jpg"
             alt="Хол готелю з каміном і диванами"
-            sizes="(min-width: 1280px) 245px, (min-width: 1024px) 194px, (min-width: 414px) 245px, 80vw"
           />
         </picture>
-
       </div>
     </div>
-    
- 
+
     <div class="hotel-slider-box">
       <div class="about-hotel-slider">
-
         <div class="hotel-slide">
           <picture>
             <source
               srcset="
-              ./images/sliders/slider-1-desk.jpg,
-              ./images/sliders/slider-1-desk-2x.jpg 2x
+                ./images/sliders/slider-1-desk.jpg    245w,
+                ./images/sliders/slider-1-desk-2x.jpg 490w
               "
               media="(min-width: 1280px)"
+              sizes="(min-width: 1280px) 245px, 100vw"
             />
             <source
               srcset="
-              ./images/sliders/slider-1-tab.jpg,
-              ./images/sliders/slider-1-tab-2x.jpg 2x
+                ./images/sliders/slider-1-tab.jpg    194w,
+                ./images/sliders/slider-1-tab-2x.jpg 388w
               "
               media="(min-width: 1024px)"
+              sizes="(min-width: 1024px) 194px, 100vw"
             />
             <source
               srcset="
-              ./images/sliders/slider-1-mob.jpg,
-              ./images/sliders/slider-1-mob-2x.jpg 2x
+                ./images/sliders/slider-1-mob.jpg    245w,
+                ./images/sliders/slider-1-mob-2x.jpg 490w
               "
-              media="(min-width: 414px)"
+              media="(min-width: 320px)"
+              sizes="(min-width: 320px) 245px"
             />
             <img
               class="autoplay__photo"
               src="./images/sliders/slider-1-desk.jpg"
-              alt="Фото номера - кімната з ліжком та видом на місто"
-              sizes="(min-width: 1280px) 245px, (min-width: 1024px) 194px, (min-width: 414px) 245px, 80vw"
+              alt="Фото номера - кімната з ліжком та квітами"
             />
           </picture>
         </div>
@@ -125,30 +127,32 @@
           <picture>
             <source
               srcset="
-              ./images/sliders/slider-2-desk.jpg,
-              ./images/sliders/slider-2-desk-2x.jpg 2x
+                ./images/sliders/slider-2-desk.jpg    245w,
+                ./images/sliders/slider-2-desk-2x.jpg 490w
               "
               media="(min-width: 1280px)"
+              sizes="(min-width: 1280px) 245px, 100vw"
             />
             <source
               srcset="
-              ./images/sliders/slider-2-tab.jpg,
-              ./images/sliders/slider-2-tab-2x.jpg 2x
+                ./images/sliders/slider-2-tab.jpg    194w,
+                ./images/sliders/slider-2-tab-2x.jpg 388w
               "
               media="(min-width: 1024px)"
+              sizes="(min-width: 1024px) 194px, 100vw"
             />
             <source
               srcset="
-              ./images/sliders/slider-2-mob.jpg,
-              ./images/sliders/slider-2-mob-2x.jpg 2x
+                ./images/sliders/slider-2-mob.jpg    245w,
+                ./images/sliders/slider-2-mob-2x.jpg 490w
               "
-              media="(min-width: 414px)"
+              media="(min-width: 320px)"
+              sizes="(min-width: 320px) 245px"
             />
             <img
               class="autoplay__photo"
               src="./images/sliders/slider-2-desk.jpg"
-              alt="Фото номера - кімната з ліжком та видом на місто"
-              sizes="(min-width: 1280px) 245px, (min-width: 1024px) 194px, (min-width: 414px) 245px, 80vw"
+              alt="ванна"
             />
           </picture>
         </div>
@@ -156,30 +160,32 @@
           <picture>
             <source
               srcset="
-              ./images/sliders/slider-4-desk.jpg,
-              ./images/sliders/slider-4-desk-2x.jpg 2x
+                ./images/sliders/slider-4-desk.jpg    245w,
+                ./images/sliders/slider-4-desk-2x.jpg 490w
               "
               media="(min-width: 1280px)"
+              sizes="(min-width: 1280px) 245px, 100vw"
             />
             <source
               srcset="
-              ./images/sliders/slider-4-tab.jpg,
-              ./images/sliders/slider-4-tab-2x.jpg 2x
+                ./images/sliders/slider-4-tab.jpg    194w,
+                ./images/sliders/slider-4-tab-2x.jpg 388w
               "
               media="(min-width: 1024px)"
+              sizes="(min-width: 1024px) 194px, 100vw"
             />
             <source
               srcset="
-              ./images/sliders/slider-4-mob.jpg,
-              ./images/sliders/slider-4-mob-2x.jpg 2x
+                ./images/sliders/slider-4-mob.jpg    245w,
+                ./images/sliders/slider-4-mob-2x.jpg 490w
               "
-              media="(min-width: 414px)"
+              media="(min-width: 320px)"
+              sizes="(min-width: 320px) 245px"
             />
             <img
               class="autoplay__photo"
               src="./images/sliders/slider-4-desk.jpg"
-              alt="Фото номера - кімната з ліжком та видом на місто"
-              sizes="(min-width: 1280px) 245px, (min-width: 1024px) 194px, (min-width: 414px) 245px, 80vw"
+              alt="біла раковина з чорним краном"
             />
           </picture>
         </div>
@@ -187,38 +193,37 @@
           <picture>
             <source
               srcset="
-              ./images/sliders/slider-5-desk.jpg,
-              ./images/sliders/slider-5-desk-2x.jpg 2x
+                ./images/sliders/slider-5-desk.jpg    245w,
+                ./images/sliders/slider-5-desk-2x.jpg 490w
               "
               media="(min-width: 1280px)"
+              sizes="(min-width: 1280px) 245px, 100vw"
             />
             <source
               srcset="
-              ./images/sliders/slider-5-tab.jpg,
-              ./images/sliders/slider-5-tab-2x.jpg 2x
+                ./images/sliders/slider-5-tab.jpg    194w,
+                ./images/sliders/slider-5-tab-2x.jpg 388w
               "
               media="(min-width: 1024px)"
+              sizes="(min-width: 1024px) 194px, 100vw"
             />
             <source
               srcset="
-              ./images/sliders/slider-5-mob.jpg,
-              ./images/sliders/slider-5-mob-2x.jpg 2x
+                ./images/sliders/slider-5-mob.jpg    245w,
+                ./images/sliders/slider-5-mob-2x.jpg 490w
               "
-              media="(min-width: 414px)"
+              media="(min-width: 320px)"
+              sizes="(min-width: 320px) 245px"
             />
             <img
               class="autoplay__photo"
               src="./images/sliders/slider-5-desk.jpg"
-              alt="Фото номера - кімната з ліжком та видом на місто"
-              sizes="(min-width: 1280px) 245px, (min-width: 1024px) 194px, (min-width: 414px) 245px, 80vw"
+              alt="Фото номера - кімната з ліжком та дзеркалом"
             />
           </picture>
         </div>
-        
       </div>
       <div class="about-hotel__slider-arrows"></div>
     </div>
-      
   </div>
- 
 </section>
