--- a/src/partials/modal-price.html
+++ b/src/partials/modal-price.html
@@ -8,9 +8,16 @@
     </button>
 
     <p class="modal-price__title">ЦІНИ НА НОМЕР</p>
-    <p class="modal-price__sub-title">Двомісний люкс</p>
+    <!-- <p class="modal-price__sub-title">Двомісний люкс</p> -->
 
     <form class="form form__modal-price">
+           <select name="number-cast" id="select-cast" class="modal-price__input modal-price__custom-select">
+                <option value="1500">ДВОМІСНИЙ ЛЮКС</option>
+                <option value="1300">ТРЬОХМІСНИЙ НОМЕР</option>
+                <option value="1000">ДВОМІСНИЙ НОМЕР</option>
+
+              </select>     
+
       <p class="modal-price__text">Категорія номеру</p>
       <div class="container__form-price">
         <div class="wrapper-input">
@@ -29,13 +36,7 @@
               required
             />
 
-            <!-- <select name="number-cast" id="select-cast" class="modal-price__input modal-price__custom-select">
-                <option value="1">Одна</option>
-                <option value="2">Дві</option>
-                <option value="3">Три</option>
-                <option value="4">Чотири</option>
-                <option value="5">П'ять</option>
-              </select>      -->
+ 
           </div>
 
           <label for="numberCast" class="modal-price__label-input"
