--- a/src/sass/pages/restaurant/_about-kitchen.scss
+++ b/src/sass/pages/restaurant/_about-kitchen.scss
@@ -155,7 +155,7 @@
   transform: rotate(180deg);
 }
 
-// KITCHEN SLIDER CONTAINER
+// <--------------------------- Kitchen Slider Container Styles
 .kitchen-slider-box {
   @include mobile {
     padding-left: 69px;
@@ -167,6 +167,13 @@
   @include desktop {
     padding-right: 0;
   }
+}
+
+// <--------------------------- Kitchen Slider Thumb Styles
+
+.kitchen-slider-thumb {
+  min-width: 548px;
+  min-height: 319px;
 }
 
 .kitchen-slider {
@@ -201,11 +208,6 @@
     opacity: 1;
     box-shadow: 2px 2px 20px 2px rgba(0, 0, 0, 0.25);
   }
-}
-
-.kitchen-slider-thumb {
-  min-width: 548px;
-  min-height: 319px;
 }
 
 .kitchen-slide {
