--- a/src/sass/pages/restaurant/_about-kitchen.scss
+++ b/src/sass/pages/restaurant/_about-kitchen.scss
@@ -74,7 +74,7 @@
 .kitchen-card:last-child {
   align-items: center;
   column-gap: 20px;
-  margin-bottom: 32px;
+  margin-bottom: 0;
 
   @include tablet {
     margin-bottom: 154px;
@@ -111,7 +111,7 @@
 }
 
 .kitchen-card__description {
-  @include font(600, 12, 1.25, 0.02);
+  @include font(600, 12, 1.25, null);
   @include tablet {
     font-size: 16px;
     line-height: 20px;
@@ -129,7 +129,7 @@
   display: inline-flex;
   width: 100%;
   gap: 32px;
-  margin-top: 20px;
+  margin-top: -8px;
   justify-content: flex-end;
   padding-right: 2px;
   @include tablet {
@@ -205,7 +205,7 @@
   .slick-list {
     @include mobilemax {
       padding: 32px 0 28px 90px;
-      margin-left: -215px;
+      margin-left: -106px;
     }
     @include tablet {
       padding: 28px 68px;
@@ -224,6 +224,10 @@
     @include tablet {
       gap: 40px;
     }
+  }
+  .kitchen-slide {
+    overflow: hidden;
+    border-radius: 2px;
   }
   .slick-slide {
     opacity: 0;
